
Version 2.2.2 - Whatever comes next.
----------
2008-07-??

	bomj:
		* Patch for alcc to improve usability

	Gaznevada:
		* implement getopt_long in cas for systems which lack it

	GonoszTopi:
		* Fixing denoiser
		* include <sys/types.h> before <regex.h> as by POSIX
		* Fix noinline in crypto for some systems
		* Fix display of ccache option
		* Add sources from search results for new downloads
		* Use output of gdlib-config for gd.h detection
		* Solaris mntent fix
		* Fix NULL pointer dereference
		* Fix for configure not using --with-geo-ip value in library check

	MalaPraxis:
		* Remap colours on Windows
		* Add resources
		* Fix wrong usage of CPath::IsOk which caused an infinite loop on Import
		* Fix wxTempFile usage for compressed IPFilter files

	Phoenix:
		* Removed the dlopen() code from UPnP.cpp.
		* Added the m4 macro to test for libupnp.
		* Updated amule_build_install.sh to work with
		  --with-libupnp-prefix.
		* Changed the UPnP code to allow the use of a service without
		  having successfully subscribed to it. That should be enough
		  to deal with some lazy router implementations.
		* Do not unregister if no service is found
		* Save the found service even if subscription has failed
		* Fix for initialization of "resultstr" in cryptopp.m4.

	Stu Redman:
		* Scanner fix for MSVC compilation
		* Fixed crash when progress bar was resized to zero width
		* Fixed sharing of large files on Windows
		* Fixed free disc space check
		* Sanity check before writing nodes.dat - don't write it 
		  if there are less than 25 contacts
		* Download List sorted on startup

	Wuischke:
		* Show connection status in toolbar when changing skin, thanks to greek

	xor:
		* Fix window resize problem on Mac OS X

--------------------------------------------------------------------------------


Version 2.2.1 - The "Excuse me, have you seen my 2.2.0 release anywhere?" version.
----------
2008-06-11

	Bas Zoetekouw: